--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "dart-sass": "^1.25.0",
+    "emailjs-com": "^3.2.0",
     "ityped": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
